still refactoring text header alignment issues

--- a/src/pages/Contact/contact.css
+++ b/src/pages/Contact/contact.css
@@ -32,20 +32,20 @@
 
 .emhead {
     margin-top: 20px;
-    margin-left: 170px;
+    margin-left: 150px;
     color: black;
 }
 
 .ctchead {
     margin-top: 20px;
-    margin-left:155px;
+    margin-left:150px;
     color: black;
     text-decoration: none;
 }
 
 .gthead {
     margin-top: 20px;
-    margin-left: 160px;   
+    margin-left: 150px;   
     color: black;
     text-decoration: none;
 }
